--- a/views/footer.jade
+++ b/views/footer.jade
@@ -1,3 +1,25 @@
+//右边盗汗
+.right-nav
+  ul
+    li#code
+      svg.icon(aria-hidden="true")
+        use(xlink:href="#icon-weixin")
+      .code
+        img(src="/images/code.jpg")
+    li
+      a(href="http://wpa.qq.com/msgrd?v=3&uin=2958191200&site=qq&menu=yes" target="_blank")
+        svg.icon(aria-hidden="true")
+          use(xlink:href="#icon-qq")
+    li#phone
+      svg.icon(aria-hidden="true")
+        use(xlink:href="#icon-dianhua")
+      .phone
+        |158-1884-8247
+    li
+      svg.icon(aria-hidden="true")
+        use(xlink:href="#icon-haoyouliebiao")
+    li#top
+      |TOP
 footer.footer-newsletter
       .container
         //- .footer-top
