--- a/views/index.jade
+++ b/views/index.jade
@@ -152,23 +152,23 @@ block content
               |用心、用责、 用情
         .row
           .col-md-3.number-block
-            .number
-              |10+
+            .number(max="10")
+              |0
             .number-abs
               |10年高端网站设计经验
           .col-md-3.number-block
-            .number
-              |28+
+            .number(max="28")
+              |0
             .number-abs
               |28+政府单位的认可
           .col-md-3.number-block
-            .number
-              |800+
+            .number(max="800")
+              |0
             .number-abs
               |800+品牌客户的选择
           .col-md-3.number-block
-            .number
-              |5000+
+            .number(max="5000")
+              |0
             .number-abs
               |5000+企业客户的选择
     seciont.news
