--- a/views/index.jade
+++ b/views/index.jade
@@ -179,7 +179,7 @@ block content
               a.newBtn.active(href="javascript:void(0)")
                 |公司新闻
               a.newBtn(href="javascript:void(0)")
-                |常见问题
+                |行业动态
       .table-page
         .tab-content
           .tab
