--- a/views/nav.jade
+++ b/views/nav.jade
@@ -15,8 +15,8 @@ nav.navbar.navbar-default.navbar-fixed-top
               a.dropdown-toggle(href="#" data-toggle="dropdown")
                 |产品中心
             li.dropdown
-              a.dropdown-toggle(href="homeblog" data-toggle="dropdown")
-                |新闻资讯
+              a.dropdown-toggle(href="/news" data-toggle="dropdown")
+                |行业动态
             li.dropdown
               a.dropdown-toggle(href="#" data-toggle="dropdown")
                 |关于我们
