分页，文章详情页

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -6179,7 +6179,7 @@ html, body {
   margin-bottom: 60px;
 }
 .widget .widget-title {
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   margin-top: 0;
   font-size: 20px;
   font-weight: 700;
@@ -7147,4 +7147,90 @@ footer .right {
 .back:hover{
   background: #69b417;
   color:#FFF;
+}
+
+/* 新闻 */
+.new-block{
+  padding:16px;
+}
+
+.new-content{
+  border:1px solid #f9f6f6;
+  cursor: pointer;
+}
+
+.new-image img{
+  width:100%;
+}
+
+.calendar{
+  font-size: 13px;
+}
+
+.new-intro{
+  padding:8px;
+}
+
+.new-more{
+  padding:0 8px;
+  background: #69b417;
+  color:#FFF;
+  overflow: hidden;
+  height: 2px;
+  line-height: 40px;
+  height:40px;
+}
+
+.new-title{
+  font-size: 1.1em;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 1;
+  overflow: hidden;
+}
+
+.right {
+  float: right;
+  line-height: 40px;
+}
+
+.pagelist{
+  text-align: center;
+}
+
+.pagelist a{
+  display: inline-block;
+  border: 1px solid #CCC;
+  color:#afadad;
+  padding:4px 13px;
+  margin-left:10px;
+}
+
+.pagelist span{
+  display: inline-block;
+  border: 1px solid #f9f9f9;
+  background: #f9f9f9;
+  color:#afadad;
+  padding:4px 13px;
+  margin-left:10px;
+}
+
+.pagelist .active{
+  background: #69b417;
+  border:1px solid #69b417;
+  color:#FFF;
+}
+
+.aboutNew{
+  margin-top:80px;
+}
+
+.aboutNew .recommended-posts{
+  margin-left:10px;
+}
+
+.aboutNew .recommended-posts li{
+  border-bottom:1px solid #a79f9f;
+  margin-bottom: 12px;
+  padding-bottom:6px;
 }
