--- a/views/nav.jade
+++ b/views/nav.jade
@@ -9,11 +9,11 @@ nav.navbar.navbar-default.navbar-fixed-top
         #main-nav-collapse.collapse.navbar-collapse
           ul.nav.navbar-nav.main-navbar-nav
             li.dropdown.active
-              a.dropdown-toggle(href="#" data-toggle="dropdown")
+              a.dropdown-toggle(href="/" data-toggle="dropdown")
                 |首页
             li.dropdown
               a.dropdown-toggle(href="#" data-toggle="dropdown")
-                |产品中心
+                |案例展示
             li.dropdown
               a.dropdown-toggle(href="/news" data-toggle="dropdown")
                 |行业动态
