--- a/views/news.jade
+++ b/views/news.jade
@@ -22,9 +22,197 @@ block content
                         |行业新动态
                     p.intro.center
                         |一切以客户的利益为出发点
-                    p.intro.center
-                        a.newBtn.active(href="javascript:void(0)")
-                            |行业研究
-                        a.newBtn(href="javascript:void(0)")
-                            |公司动态
+                    p.intro.center.news
+                        if type == 'it'
+                            a.newBtn.active(href="/news/p/it")
+                                |行业研究
+                        else
+                            a.newBtn(href="/news/p/it")
+                                |行业研究
+                        if type == 'company'
+                            a.newBtn.active(href="/news/p/company")
+                                |公司动态
+                        else
+                            a.newBtn(href="/news/p/company")
+                                |公司动态
+            section
+                .container
+                    .row
+                        .col-md-4.new-block
+                            .new-content
+                                .new-image
+                                    img(src="/images/news/20180222230724050.jpg")
+                                .new-bottom
+                                    .new-intro
+                                        i.fa.fa-calendar.calendar
+                                            |&nbsp;&nbsp;2018/02/22
+                                        h3.new-title
+                                            |站外论坛推广注意事项有哪些?站外论坛推广注意事项有哪些?
+                                        p
+                                            |论坛推广是网站外推广的不错的途径。因为一般论坛权重很高，
+                                            |尤其对新网站是个不错的推广方式。网站外论坛推广注意事项你
+                                            |又知道多少呢?因为论坛可以供网页讨论，盲目的摆广告很可能给
+                                            |自身的网站带来不好的影响。深圳网站建设公司优联创就来分享一
+                                            |下论坛推广注意事项。
+                                    .new-more
+                                        |查看更多
+                                        i.fa.fa-angle-right.right
+                        .col-md-4.new-block
+                            .new-content
+                                .new-image
+                                    img(src="/images/news/20180222230724050.jpg")
+                                .new-bottom
+                                    .new-intro
+                                        i.fa.fa-calendar.calendar
+                                            |&nbsp;&nbsp;2018/02/22
+                                        h3.new-title
+                                            |站外论坛推广注意事项有哪些?
+                                        p
+                                            |论坛推广是网站外推广的不错的途径。因为一般论坛权重很高，
+                                            |尤其对新网站是个不错的推广方式。网站外论坛推广注意事项你
+                                            |又知道多少呢?因为论坛可以供网页讨论，盲目的摆广告很可能给
+                                            |自身的网站带来不好的影响。深圳网站建设公司优联创就来分享一
+                                            |下论坛推广注意事项。
+                                    .new-more
+                                        |查看更多
+                                        i.fa.fa-angle-right.right
+                        .col-md-4.new-block
+                            .new-content
+                                .new-image
+                                    img(src="/images/news/20180222230724050.jpg")
+                                .new-bottom
+                                    .new-intro
+                                        i.fa.fa-calendar.calendar
+                                            |&nbsp;&nbsp;2018/02/22
+                                        h3.new-title
+                                            |站外论坛推广注意事项有哪些?
+                                        p
+                                            |论坛推广是网站外推广的不错的途径。因为一般论坛权重很高，
+                                            |尤其对新网站是个不错的推广方式。网站外论坛推广注意事项你
+                                            |又知道多少呢?因为论坛可以供网页讨论，盲目的摆广告很可能给
+                                            |自身的网站带来不好的影响。深圳网站建设公司优联创就来分享一
+                                            |下论坛推广注意事项。
+                                    .new-more
+                                        |查看更多
+                                        i.fa.fa-angle-right.right
+                    .row
+                        .col-md-4.new-block
+                                .new-content
+                                    .new-image
+                                        img(src="/images/news/20180222230724050.jpg")
+                                    .new-bottom
+                                        .new-intro
+                                            i.fa.fa-calendar.calendar
+                                                |&nbsp;&nbsp;2018/02/22
+                                            h3.new-title
+                                                |站外论坛推广注意事项有哪些?
+                                            p
+                                                |论坛推广是网站外推广的不错的途径。因为一般论坛权重很高，
+                                                |尤其对新网站是个不错的推广方式。网站外论坛推广注意事项你
+                                                |又知道多少呢?因为论坛可以供网页讨论，盲目的摆广告很可能给
+                                                |自身的网站带来不好的影响。深圳网站建设公司优联创就来分享一
+                                                |下论坛推广注意事项。
+                                        .new-more
+                                            |查看更多
+                                            i.fa.fa-angle-right.right
+                        .col-md-4.new-block
+                                .new-content
+                                    .new-image
+                                        img(src="/images/news/20180222230724050.jpg")
+                                    .new-bottom
+                                        .new-intro
+                                            i.fa.fa-calendar.calendar
+                                                |&nbsp;&nbsp;2018/02/22
+                                            h3.new-title
+                                                |站外论坛推广注意事项有哪些?
+                                            p
+                                                |论坛推广是网站外推广的不错的途径。因为一般论坛权重很高，
+                                                |尤其对新网站是个不错的推广方式。网站外论坛推广注意事项你
+                                                |又知道多少呢?因为论坛可以供网页讨论，盲目的摆广告很可能给
+                                                |自身的网站带来不好的影响。深圳网站建设公司优联创就来分享一
+                                                |下论坛推广注意事项。
+                                        .new-more
+                                            |查看更多
+                                            i.fa.fa-angle-right.right
+                        .col-md-4.new-block
+                                .new-content
+                                    .new-image
+                                        img(src="/images/news/20180222230724050.jpg")
+                                    .new-bottom
+                                        .new-intro
+                                            i.fa.fa-calendar.calendar
+                                                |&nbsp;&nbsp;2018/02/22
+                                            h3.new-title
+                                                |站外论坛推广注意事项有哪些?
+                                            p
+                                                |论坛推广是网站外推广的不错的途径。因为一般论坛权重很高，
+                                                |尤其对新网站是个不错的推广方式。网站外论坛推广注意事项你
+                                                |又知道多少呢?因为论坛可以供网页讨论，盲目的摆广告很可能给
+                                                |自身的网站带来不好的影响。深圳网站建设公司优联创就来分享一
+                                                |下论坛推广注意事项。
+                                        .new-more
+                                            |查看更多
+                                            i.fa.fa-angle-right.right
+                    .row
+                        .col-md-4.new-block
+                                .new-content
+                                    .new-image
+                                        img(src="/images/news/20180222230724050.jpg")
+                                    .new-bottom
+                                        .new-intro
+                                            i.fa.fa-calendar.calendar
+                                                |&nbsp;&nbsp;2018/02/22
+                                            h3.new-title
+                                                |站外论坛推广注意事项有哪些?
+                                            p
+                                                |论坛推广是网站外推广的不错的途径。因为一般论坛权重很高，
+                                                |尤其对新网站是个不错的推广方式。网站外论坛推广注意事项你
+                                                |又知道多少呢?因为论坛可以供网页讨论，盲目的摆广告很可能给
+                                                |自身的网站带来不好的影响。深圳网站建设公司优联创就来分享一
+                                                |下论坛推广注意事项。
+                                        .new-more
+                                            |查看更多
+                                            i.fa.fa-angle-right.right
+                        .col-md-4.new-block
+                                .new-content
+                                    .new-image
+                                        img(src="/images/news/20180222230724050.jpg")
+                                    .new-bottom
+                                        .new-intro
+                                            i.fa.fa-calendar.calendar
+                                                |&nbsp;&nbsp;2018/02/22
+                                            h3.new-title
+                                                |站外论坛推广注意事项有哪些?
+                                            p
+                                                |论坛推广是网站外推广的不错的途径。因为一般论坛权重很高，
+                                                |尤其对新网站是个不错的推广方式。网站外论坛推广注意事项你
+                                                |又知道多少呢?因为论坛可以供网页讨论，盲目的摆广告很可能给
+                                                |自身的网站带来不好的影响。深圳网站建设公司优联创就来分享一
+                                                |下论坛推广注意事项。
+                                        .new-more
+                                            |查看更多
+                                            i.fa.fa-angle-right.right
+                        .col-md-4.new-block
+                                .new-content
+                                    .new-image
+                                        img(src="/images/news/20180222230724050.jpg")
+                                    .new-bottom
+                                        .new-intro
+                                            i.fa.fa-calendar.calendar
+                                                |&nbsp;&nbsp;2018/02/22
+                                            h3.new-title
+                                                |站外论坛推广注意事项有哪些?
+                                            p
+                                                |论坛推广是网站外推广的不错的途径。因为一般论坛权重很高，
+                                                |尤其对新网站是个不错的推广方式。网站外论坛推广注意事项你
+                                                |又知道多少呢?因为论坛可以供网页讨论，盲目的摆广告很可能给
+                                                |自身的网站带来不好的影响。深圳网站建设公司优联创就来分享一
+                                                |下论坛推广注意事项。
+                                        .new-more
+                                            |查看更多
+                                            i.fa.fa-angle-right.right                
+            section
+                .container
+                    .pagelist(totalpage="#{page.totalPage}",
+                    pagesize="9",currentpage="#{page.currentPage}",prevurl="#{prevUrl}")
         include footer
