--- a/views/footer.jade
+++ b/views/footer.jade
@@ -15,6 +15,8 @@
         use(xlink:href="#icon-dianhua")
       .phone
         |158-1884-8247
+      .phone.phone2
+        |136-6898-4401
     li
       svg.icon(aria-hidden="true")
         use(xlink:href="#icon-haoyouliebiao")
