--- a/views/nav.jade
+++ b/views/nav.jade
@@ -18,7 +18,7 @@ nav.navbar.navbar-default.navbar-fixed-top
               a.dropdown-toggle(href="/news" data-toggle="dropdown")
                 |行业动态
             li.dropdown
-              a.dropdown-toggle(href="#" data-toggle="dropdown")
+              a.dropdown-toggle(href="/info/aboutUs" data-toggle="dropdown")
                 |关于我们
             li.dropdown
               a.dropdown-toggle(href="#" data-toggle="dropdown")
