--- a/views/nav.jade
+++ b/views/nav.jade
@@ -21,9 +21,9 @@ nav.navbar.navbar-default.navbar-fixed-top
               a.dropdown-toggle(href="/info/aboutUs" data-toggle="dropdown")
                 |关于我们
             li.dropdown
-              a.dropdown-toggle(href="#" data-toggle="dropdown")
+              a.dropdown-toggle(href="/info/contactUs" data-toggle="dropdown")
                 |联系我们
-            li
+            li.dropdown
               a(href="blog-single-post.html")
                 |吐槽大会
             //li
