--- a/views/newsdetail.jade
+++ b/views/newsdetail.jade
@@ -46,8 +46,19 @@ block content
                                         |disseminate customer directed e-commerce with prospective partnerships. Collaboratively 
                                         |actualize revolutionary total linkage before orthogonal catalysts for change. Appropriately 
                                         |facilitate optimal meta-services whereas end-to-end solutions...
-                                    p.read-more
-                                        a.read-more(href="#") Read More
+                                    .read-more.newNav
+                                        .newNavLeft
+                                            span
+                                                |上一篇:&nbsp;
+                                                a.read-more(href="#") 广州油麦菜信息科技有限公司
+                                            span
+                                                |下一篇:&nbsp;
+                                                a.read-more(href="#") 广州油麦菜信息科技有限公司
+                                        .newNavRight
+                                            span
+                                                a(href="#")
+                                                    i.fa.fa-arrow-left 
+                                                    |&nbsp;&nbsp;动态列表
                         .clearfix.margin-top-30.margin-bottom-30
                         
                 .col-md-4.col-lg-3
