--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -6851,8 +6851,6 @@ footer .right {
   font-weight: bold;
   font-size: 8em;
   color: #68b417;
-  text-decoration:line-through;
-  text-decoration-color: #FFF;
   overflow: hidden;
 }
 
@@ -7250,4 +7248,40 @@ footer .right {
   float: left;
   margin-left: 8px;
   margin-top: 8px;
+}
+
+#allmap{
+  width: 100%;
+  height: 300px;
+  overflow: hidden;
+  margin:0;
+  font-family:"微软雅黑";
+}
+
+.newNav .newNavLeft span{
+  display: block;
+}
+
+.newNavLeft {
+  float: left;
+}
+
+.newNavRight {
+  float:right;
+}
+
+.newNavRight a{
+  display: block;
+  border: 1px solid #69B417;
+  padding: 2px 8px;
+  background: #69B417;
+  color: #FFF !important;
+}
+
+.newNav a{
+  color: #969595;
+}
+
+.clear-both{
+  clear: both;
 }
