--- a/views/footer.jade
+++ b/views/footer.jade
@@ -67,7 +67,7 @@ footer.footer-newsletter
             p.copyright-text
               |&copy;2017
               a(href="#" target="_blank")
-                | 油麦菜信息科技有限公司
+                | 广州油麦菜信息科技有限公司
               |. All Rights Reserved.
           ul.right.list-inline.social-icons.social-icons-bordered.social-icons-small.social-icons-fullrounded
             li
