--- a/views/nav.jade
+++ b/views/nav.jade
@@ -12,7 +12,7 @@ nav.navbar.navbar-default.navbar-fixed-top
               a.dropdown-toggle(href="/" data-toggle="dropdown")
                 |首页
             li.dropdown
-              a.dropdown-toggle(href="#" data-toggle="dropdown")
+              a.dropdown-toggle(href="/cases" data-toggle="dropdown")
                 |案例展示
             li.dropdown
               a.dropdown-toggle(href="/news" data-toggle="dropdown")
