--- a/views/nav.jade
+++ b/views/nav.jade
@@ -23,9 +23,9 @@ nav.navbar.navbar-default.navbar-fixed-top
             li.dropdown
               a.dropdown-toggle(href="/info/contactUs" data-toggle="dropdown")
                 |联系我们
-            li.dropdown
-              a(href="blog-single-post.html")
-                |吐槽大会
+            //- li.dropdown
+            //-   a(href="blog-single-post.html")
+            //-     |吐槽大会
             //li
               a.btn-navbar(href="#downloads/bravana-responsive-website-template/?utm_source=bravanalite&utm_medium=button&utm_campaign=bravana" target="_blank")
                 span
