--- a/views/layout.jade
+++ b/views/layout.jade
@@ -22,6 +22,7 @@ html
     link(rel="apple-touch-icon-precomposed" href="/ico/bravana57.png")
     link(rel="shortcut icon" href="/ico/favicon.ico")
     script(src="http://api.map.baidu.com/api?v=2.0&ak=egb5Zt1clDlnNeDxLAxAlNqyAKEV9qhv")
+    script(src="/javascripts/vue.js")
     title= title
   body.home
     block content
