--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -6927,7 +6927,7 @@ footer .right {
 }
 
 .tab ul{
-  margin:8px;
+  margin:0px 8px;
   padding:0;
 }
 
@@ -7008,7 +7008,7 @@ footer .right {
 .new-right-content li{
   float: left;
   width: 50%;
-  padding:10px;
+  padding:0 10px;
 }
 
 .new-right-content h4 a{
