--- a/views/index.jade
+++ b/views/index.jade
@@ -150,7 +150,7 @@ block content
                       span.line
                       span.month
                         |2018-4-18
-                    .new-content
+                    .new-content.news-index-block
                       h4
                         a(href="help/info.asp?lb_id=3128" title="签约北京也趣国际传媒广告有限公司网站建设项目")
                           |签约北京也趣国际传媒广告有限公司网站建设项目
@@ -166,7 +166,7 @@ block content
                       span.line
                       span.month
                         |2018-4-18
-                    .new-content
+                    .new-content.news-index-block
                       h4
                         a(href="help/info.asp?lb_id=3128" title="签约北京也趣国际传媒广告有限公司网站建设项目")
                           |签约北京也趣国际传媒广告有限公司网站建设项目
@@ -182,7 +182,7 @@ block content
                       span.line
                       span.month
                         |2018-4-18
-                    .new-content
+                    .new-content.news-index-block
                       h4
                         a(href="help/info.asp?lb_id=3128" title="签约北京也趣国际传媒广告有限公司网站建设项目")
                           |签约北京也趣国际传媒广告有限公司网站建设项目
@@ -198,7 +198,7 @@ block content
                       span.line
                       span.month
                         |2018-4-18
-                    .new-content
+                    .new-content.news-index-block
                       h4
                         a(href="help/info.asp?lb_id=3128" title="签约北京也趣国际传媒广告有限公司网站建设项目")
                           |签约北京也趣国际传媒广告有限公司网站建设项目
@@ -248,7 +248,7 @@ block content
                       span.line
                       span.month
                         |2018-4-18
-                    .new-content
+                    .new-content.news-index-block
                       h4
                         a(href="help/info.asp?lb_id=3128" title="签约北京也趣国际传媒广告有限公司网站建设项目")
                           |签约北京也趣国际传媒广告有限公司网站建设项目
@@ -264,7 +264,7 @@ block content
                       span.line
                       span.month
                         |2018-4-18
-                    .new-content
+                    .new-content.news-index-block
                       h4
                         a(href="help/info.asp?lb_id=3128" title="签约北京也趣国际传媒广告有限公司网站建设项目")
                           |签约北京也趣国际传媒广告有限公司网站建设项目
@@ -280,7 +280,7 @@ block content
                       span.line
                       span.month
                         |2018-4-18
-                    .new-content
+                    .new-content.news-index-block
                       h4
                         a(href="help/info.asp?lb_id=3128" title="签约北京也趣国际传媒广告有限公司网站建设项目")
                           |签约北京也趣国际传媒广告有限公司网站建设项目
@@ -296,7 +296,7 @@ block content
                       span.line
                       span.month
                         |2018-4-18
-                    .new-content
+                    .new-content.news-index-block
                       h4
                         a(href="help/info.asp?lb_id=3128" title="签约北京也趣国际传媒广告有限公司网站建设项目")
                           |签约北京也趣国际传媒广告有限公司网站建设项目
